--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="./assets/css/style.css">
         <title>PopWatch</title>
-       
-<div class="position-fixed top-0 right-0 w-full flex items-center justify-between bg-gray-200 p-4 rounded-lg">
-    <input type="text" class="bg-gray-100 text-gray-800 border-none rounded-lg w-full p-2.5" placeholder="Search">
-    <button class="bg-blue-500 hover:bg-blue-700 focus:outline-none focus:ring-4 focus:ring-blue-300 text-white font-medium rounded-lg text-sm px-5 py-2.5">
-      Search
-    </button>
-  </div>
 </head>
+
+
 <body>
+    <form>
+        <input type="search" placeholder="Search...">
+        <button type="submit">
+          <i class="fa fa-search"></i>
+        </button>
+      </form>
+      
 <header class="bg-rose-800">
 hello
 </header>
