--- a/movies.html
+++ b/movies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.tailwindcss.com" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com" rel="stylesheet"></script>
     <title>Movies - PopWatch</title>
     <style>
         .dropdown {
@@ -23,7 +23,7 @@
     </style>
 </head>
 <body class="bg-gray-100">
-    <header class="bg-rose-800 py-4 text-white">
+    <header class="bg-rose-800 py-4 text-black">
         <div class="container mx-auto flex justify-end items-center px-4">
             <form class="flex">
                 <input type="search" placeholder="Search..." class="rounded-l-lg px-4 py-2 outline-none focus:ring-2 focus:ring-rose-500">
@@ -50,6 +50,10 @@
             </div>
             
             <!-- Movie listings here -->
+        </div>
+        
+        <div class="fixed bottom-4 right-4">
+            <a href="index.html" class="bg-rose-600 text-white px-4 py-2 rounded-full">Go Back to Main Page</a>
         </div>
     </main>
 
