--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-    <link href="https://cdn.tailwindcss.com" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+    <script src="https://cdn.tailwindcss.com" rel="stylesheet"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>PopWatch</title>
     <style>
         .center-top {
@@ -39,8 +41,30 @@
             <!-- Top of Page Feature -->
             <div class="mb-8">
                 <h2 class="text-2xl font-semibold">Top of Page Feature</h2>
-                <div class="flex justify-center items-center bg-gray-200 p-4">
+                <div class="flex justify-center items-center bg-gray-200 p-4" id="featured">
                     <!-- Top of Page Feature content here -->
+                    <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-backface-hidden">
+                        <div class="swiper-wrapper" id="swiper-wrapper-10259fbc76d64c157" aria-live="polite">
+                          <div id="one" class="swiper-slide swiper-slide-active" style="width: 107.667px; margin-right: 30px;">Slide 1</div>
+                          <div class="swiper-slide swiper-slide-next" style="width: 107.667px; margin-right: 30px;">Slide 2</div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;">Slide 3</div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;">Slide 4</div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;">Slide 5</div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;">Slide 6</div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;">Slide 7</div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;">Slide 8</div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;">Slide 9</div>
+                        </div>
+                        <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal">
+                            <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 6"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 7"></span>
+                        </div>
+                      <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
                 </div>
             </div>
 
@@ -70,6 +94,18 @@
     <button onclick="scrollToTop()" class="fixed bottom-4 right-4 bg-rose-600 text-white px-4 py-2 rounded-full">
         Top of Page
     </button>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+          slidesPerView: 3,
+          spaceBetween: 30,
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+          },
+        });
+      </script>
 
     <script src="./assets/js/script.js"></script>
     <script>
