--- a/movies.html
+++ b/movies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.tailwindcss.com" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com" rel="stylesheet"></script>
     <title>Movies - PopWatch</title>
     <style>
         .dropdown {
@@ -35,7 +35,7 @@
     </header>
 
     <main>
-        <div class="container mx-auto mt-4">
+        <div id = moviespage class="container mx-auto mt-4">
             <!-- Movie content here -->
             <h1 class="text-2xl font-semibold mb-4">Movies</h1>
             
@@ -53,6 +53,6 @@
         </div>
     </main>
 
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/movies.js"></script>
 </body>
 </html>
