--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
                     <!-- Top of Page Feature content here -->
                     <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-backface-hidden" >
                         <div class="swiper-wrapper" id="swiper-wrapper-10259fbc76d64c157" aria-live="polite">
-                          <div id="1" class="swiper-slide swiper-slide-active" style="width: 107.667px; margin-right: 30px;"></div>
-                          <div id="1" class="swiper-slide swiper-slide-next" style="width: 107.667px; margin-right: 30px;"></div>
-                          <div id="1" class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
-                          <div id="1" class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
-                          <div id="1" class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
-                          <div id="1" class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
-                          <div id="1" class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
-                          <div id="1" class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
-                          <div id="1" class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide swiper-slide-active" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide swiper-slide-next" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
                         </div>
                         <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal">
                             <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span>
