--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </head>
 
 <body class="bg-gray-100">
-    <header class="bg-rose-800 py-4 text-white">
+    <header class="bg-sky-900 py-4 text-white">
         <body class="bg-gray-100">
-            <header class="bg-rose-800 py-4 text-black">
+            <header class="bg-sky-900 py-4 text-black">
                 <div class="container mx-auto flex justify-end items-center px-4">
                     <form class="flex">
                         <input type="search" placeholder="Search..." class="rounded-l-lg px-4 py-2 outline-none focus:ring-2 focus:ring-rose-500">
@@ -37,7 +37,7 @@
                     </form>
                 </div>
             </header>
-
+        
     <main>
         <div class="container mx-auto mt-4">
             <!-- Carousel sections, features, and movies tab here -->
@@ -47,7 +47,7 @@
             <div class="mb-8">
 
                 <h2 class="text-2xl font-semibold">Top of Page Feature</h2>
-                <div class="flex justify-center items-center bg-gray-200 p-4" id="featured">
+                <div class="flex justify-center items-center bg-sky-100 p-4" id="featured">
                     <!-- Top of Page Feature content here -->
                     <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-backface-hidden" >
                         <div class="swiper-wrapper" id="swiper-wrapper-10259fbc76d64c157" aria-live="polite">
@@ -70,12 +70,37 @@
                             <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 6"></span>
                             <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 7"></span>
                         </div>
-                      <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
+                      <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                    </div>
+                </div>
             <!-- Top of Page Feature -->
             <div class="mb-8">
 
                 <h2 class="text-2xl font-semibold">Top Box Office </h2>
-                <div class="flex justify-center items-center bg-gray-200 p-4">
+                <div class="flex justify-center items-center bg-sky-100 p-4" id="box_office">
+                    <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-backface-hidden" >
+                        <div class="swiper-wrapper" id="swiper-wrapper-10259fbc76d64c157" aria-live="polite">
+                          <div class="swiper-slide swiper-slide-active" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide swiper-slide-next" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                        </div>
+                        <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal">
+                            <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 6"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 7"></span>
+                        </div>
+                      <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                    </div>
                      <a href="movies.html" id = "BoxOfficeButton" class="absolute right-11 bg-rose-600 text-white px-4 py-2 rounded-full">See more</a>
                     <!-- Top of Page Feature content here -->
                 </div>
@@ -83,7 +108,7 @@
 
             <div class="mb-8">
                 <h2 class="text-2xl font-semibold">Most Popular Movies</h2>
-                <div class="flex justify-center items-center bg-gray-200 p-4">
+                <div class="flex justify-center items-center bg-sky-100 p-4">
                      <a href="movies.html" id = "MostPopularButton" class="absolute right-11 bg-rose-600 text-white px-4 py-2 rounded-full">See more</a>
                     <!-- Top of Page Feature content here -->
                 </div>
@@ -91,7 +116,7 @@
 
             <div class="mb-8">
                 <h2 class="text-2xl font-semibold">Top Rated Movies</h2>
-                <div class="flex justify-center items-center bg-gray-200 p-4">
+                <div class="flex justify-center items-center bg-sky-100 p-4">
                      <a href="movies.html" id = "TopRatedButton" class="absolute right-11 bg-rose-600 text-white px-4 py-2 rounded-full">See more</a>
 
                     <!-- Top of Page Feature content here -->
@@ -99,19 +124,12 @@
                 </div>
             </div>
 
-            <!-- Homepage Feature -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-semibold">New BoxOffice</h2>
-                <div class="flex justify-center items-center bg-gray-200 p-4">
-                    <!-- Homepage Feature content here -->
-                </div>
-            </div>
 
             <!-- Movies Tab -->
             <div class="mb-8">
                 <input type="checkbox" id="moviesTab" class="hidden">
                 <label for="moviesTab" class="text-xl font-semibold cursor-pointer">Favorites or top rated</label>
-                <div class="flex justify-center items-center bg-gray-200 p-4">
+                <div class="flex justify-center items-center bg-sky-100 p-4">
                     <a href="movies.html" class="bg-rose-600 text-white px-4 py-2 rounded-full">See all Movies</a>
                 </div>
             </div>
