movies added to page

--- a/movies.html
+++ b/movies.html
@@ -35,7 +35,7 @@
     </header>
 
     <main>
-        <div id = moviespage class="container mx-auto mt-4">
+        <div id="moviespage" class="container mx-auto mt-4">
             <!-- Movie content here -->
             <h1 class="text-2xl font-semibold mb-4">Movies</h1>
             
