--- a/index.html
+++ b/index.html
@@ -108,7 +108,30 @@
 
             <div class="mb-8">
                 <h2 class="text-2xl font-semibold">Most Popular Movies</h2>
-                <div class="flex justify-center items-center bg-sky-100 p-4">
+                <div class="flex justify-center items-center bg-sky-100 p-4" id="popular">
+                    <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-backface-hidden" >
+                        <div class="swiper-wrapper" id="swiper-wrapper-10259fbc76d64c157" aria-live="polite">
+                          <div class="swiper-slide swiper-slide-active" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide swiper-slide-next" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                        </div>
+                        <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal">
+                            <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 6"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 7"></span>
+                        </div>
+                      <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                    </div>
                      <a href="movies.html" id = "MostPopularButton" class="absolute right-11 bg-rose-600 text-white px-4 py-2 rounded-full">See more</a>
                     <!-- Top of Page Feature content here -->
                 </div>
@@ -116,7 +139,30 @@
 
             <div class="mb-8">
                 <h2 class="text-2xl font-semibold">Top Rated Movies</h2>
-                <div class="flex justify-center items-center bg-sky-100 p-4">
+                <div class="flex justify-center items-center bg-sky-100 p-4" id="rated">
+                    <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-backface-hidden" >
+                        <div class="swiper-wrapper" id="swiper-wrapper-10259fbc76d64c157" aria-live="polite">
+                          <div class="swiper-slide swiper-slide-active" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide swiper-slide-next" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                          <div class="swiper-slide" style="width: 107.667px; margin-right: 30px;"></div>
+                        </div>
+                        <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal">
+                            <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button" aria-label="Go to slide 1" aria-current="true"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 3"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 4"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 5"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 6"></span>
+                            <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 7"></span>
+                        </div>
+                      <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                    </div>
                      <a href="movies.html" id = "TopRatedButton" class="absolute right-11 bg-rose-600 text-white px-4 py-2 rounded-full">See more</a>
 
                     <!-- Top of Page Feature content here -->
