html changes made

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- Top of Page Feature -->
             <div class="mb-8">
 
-                <h2 class="text-2xl font-semibold">Top of Page Feature</h2>
+                <h2 class="text-2xl font-semibold">Featured Movies</h2>
                 <div class="flex justify-center items-center bg-sky-100 p-4" id="featured">
                     <!-- Top of Page Feature content here -->
                     <div class="swiper mySwiper swiper-initialized swiper-horizontal swiper-backface-hidden" >
@@ -174,7 +174,6 @@
             <!-- Movies Tab -->
             <div class="mb-8">
                 <input type="checkbox" id="moviesTab" class="hidden">
-                <label for="moviesTab" class="text-xl font-semibold cursor-pointer">Favorites or top rated</label>
                 <div class="flex justify-center items-center bg-sky-100 p-4">
                     <a href="movies.html" class="bg-rose-600 text-white px-4 py-2 rounded-full">See all Movies</a>
                 </div>
