--- a/movies.html
+++ b/movies.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com" rel="stylesheet"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Movies - PopWatch</title>
     <style>
         .dropdown {
